--- a/projeto-jumpers.html
+++ b/projeto-jumpers.html
@@ -27,7 +27,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto</title>
-    <link rel="stylesheet" href="style-projeto.css">
+    <link rel="stylesheet" href="style-projeto-jumpers.css">
     <!-- Link Ícone da aba -->
     <link rel="shortcut icon" href="http://127.0.0.1:5500/src/Logo%20modo%20claro.png" type="image/x-icon">
 </head>
@@ -61,7 +61,7 @@
 
     <!-- IMAGEM DE INICIO -->
     <div class="imagem1">
-        <h1>NOME DO PROJETO</h1>
+        <h1>JUMPERS</h1>
     </div>
 
     <div data-aos="fade-up">
@@ -69,22 +69,16 @@
             <div class="text">
                 <h2>SOBRE O PROJETO</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed laudantium, consequuntur sunt delectus
-                    impedit, assumenda non enim, a dolores officiis aliquam pariatur neque aut temporibus illo tempora
-                    tempore suscipit! Ullam.
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, sint illum! Provident iusto
-                    maiores
-                    optio architecto molestiae temporibus, amet numquam voluptas quod et, consequuntur placeat soluta
-                    officia a. Fuga, voluptatum.
+                <p>O <b>Projeto Jumpers</b> oferece aulas gratuitas de artes marciais, como Karate, Taekwondo e Kickboxing, para pessoas de baixa renda e em vulnerabilidade social. Criado inicialmente como um departamento de Karate em uma ONG no bairro Restinga, o projeto se tornou uma associação independente e agora funciona em parceria com o CTG Roda de Chimarrão, no bairro Serraria. Além de ensinar técnicas de luta, o Jumpers busca formar cidadãos mais disciplinados e confiantes, com alguns alunos já conquistando medalhas em competições. O projeto também prepara futuros instrutores. A comunidade pode apoiar com doações ou como voluntária, e as inscrições são feitas no local.
                 </p>
 
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi pariatur mollitia iure dicta blanditiis similique vitae esse at laboriosam eaque id, magnam omnis nam repudiandae iste odio, neque dolor itaque.
+                <p>
                 </p>
             </div>
     </div>
 
     <div class="imagem-projeto">
-        <img class="img-projeto" src="https://cdn.pixabay.com/photo/2017/05/02/03/41/action-2277292_1280.jpg" alt="">
+        <img class="img-projeto" src="./src/ACJ5.jpg" alt="">
     </div>
 
 
@@ -153,7 +147,7 @@
             </ul>
         </div>
     </div>
-</footer> 
+</footer>
 
     <script src="script.js"></script>
     <script>
