--- a/projeto-md-black.html
+++ b/projeto-md-black.html
@@ -27,7 +27,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto</title>
-    <link rel="stylesheet" href="style-projeto.css">
+    <link rel="stylesheet" href="style-projeto-md-black.css">
     <!-- Link Ícone da aba -->
     <link rel="shortcut icon" href="http://127.0.0.1:5500/src/Logo%20modo%20claro.png" type="image/x-icon">
 </head>
@@ -60,8 +60,8 @@
     </header>
 
     <!-- IMAGEM DE INICIO -->
-    <div class="imagem1">
-        <h1>NOME DO PROJETO</h1>
+    <div class="imagem1" >
+        <div class="text-img"> <h1>MD BLACK</h1> </div>
     </div>
 
     <div data-aos="fade-up">
@@ -69,22 +69,22 @@
             <div class="text">
                 <h2>SOBRE O PROJETO</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed laudantium, consequuntur sunt delectus
-                    impedit, assumenda non enim, a dolores officiis aliquam pariatur neque aut temporibus illo tempora
-                    tempore suscipit! Ullam.
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, sint illum! Provident iusto
-                    maiores
-                    optio architecto molestiae temporibus, amet numquam voluptas quod et, consequuntur placeat soluta
-                    officia a. Fuga, voluptatum.
+                <p><b>Projeto MD Black:</b> Oportunidade e Superação para Jovens Sonhadores
+
+                    O MD Black é um projeto de futebol gratuito, fundado por Prof. Gab em 2022, com o objetivo de oferecer a jovens a chance de se tornarem jogadores profissionais, sem nenhum custo. Localizado na Redenção, em Porto Alegre, o projeto proporciona oportunidades para jovens talentos se desenvolverem no esporte, enquanto aprendem disciplina, trabalho em equipe e superação.
+                    
+                    Com foco em jovens de comunidades que não têm acesso a treinamentos pagos, o MD Black busca criar um futuro melhor através do futebol. Em 2024, o projeto se destacou ao conquistar o título de Campeão da Taça Glorinha e Vice-Campeão da Taça das Favelas, refletindo a qualidade do trabalho realizado.
+                    
+                    Além do futebol, o projeto investe no desenvolvimento pessoal dos participantes, formando cidadãos íntegros, preparados para os desafios da vida. O MD Black é mais do que um time de futebol – é uma plataforma de transformação e realização de sonhos para jovens que buscam conquistar um futuro melhor.
                 </p>
 
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi pariatur mollitia iure dicta blanditiis similique vitae esse at laboriosam eaque id, magnam omnis nam repudiandae iste odio, neque dolor itaque.
+                <p>Junte-se ao MD Black: Onde o talento encontra a oportunidade!
                 </p>
             </div>
     </div>
 
     <div class="imagem-projeto">
-        <img class="img-projeto" src="https://cdn.pixabay.com/photo/2017/05/02/03/41/action-2277292_1280.jpg" alt="">
+        <img class="img-projeto" src="./src/MD2.JPG" alt="">
     </div>
 
 
@@ -94,11 +94,11 @@
             <h2>CONTATOS DO PROJETO</h2>
 
             <div class="icons-redes">
-                <a href="#">
-                    <i class="fa-brands fa-facebook face"></i>
+                <a target="_blank" href="https://www.tiktok.com/@gabbcast31?is_from_webapp=1&sender_device=pc">
+                    <i class="fa-brands fa-tiktok"></i>
                 </a>
 
-                <a href="">
+                <a target="_blank" href="https://www.instagram.com/_mdacademy/">
                     <i class="fa-brands fa-square-instagram insta"></i>
                 </a>
             </div>
@@ -153,7 +153,7 @@
             </ul>
         </div>
     </div>
-</footer> 
+</footer>
 
     <script src="script.js"></script>
     <script>
