--- a/projeto-power-dance.html
+++ b/projeto-power-dance.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
+<head> 
     <!-- ANIMAÇÕES -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -27,7 +27,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto</title>
-    <link rel="stylesheet" href="style-projeto.css">
+    <link rel="stylesheet" href="style-projeto-power-dance.css">
     <!-- Link Ícone da aba -->
     <link rel="shortcut icon" href="http://127.0.0.1:5500/src/Logo%20modo%20claro.png" type="image/x-icon">
 </head>
@@ -61,7 +61,7 @@
 
     <!-- IMAGEM DE INICIO -->
     <div class="imagem1">
-        <h1>NOME DO PROJETO</h1>
+        <h1>FEMININE POWER</h1>
     </div>
 
     <div data-aos="fade-up">
@@ -69,22 +69,16 @@
             <div class="text">
                 <h2>SOBRE O PROJETO</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed laudantium, consequuntur sunt delectus
-                    impedit, assumenda non enim, a dolores officiis aliquam pariatur neque aut temporibus illo tempora
-                    tempore suscipit! Ullam.
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, sint illum! Provident iusto
-                    maiores
-                    optio architecto molestiae temporibus, amet numquam voluptas quod et, consequuntur placeat soluta
-                    officia a. Fuga, voluptatum.
+                <p>O <b>Feminine Power</b> foi criado por Priscilla, uma aluna da Faculdade de Direito, inicialmente como um trabalho acadêmico para abordar os direitos das mulheres. Porém, ela decidiu levar o projeto adiante, criando um programa de extensão cultural que oferece aulas gratuitas de dança, com o objetivo de promover o empoderamento feminino. O programa busca dar a todas as mulheres o direito de se expressar livremente, independentemente de sua origem social. Além de ensinar dança, as aulas fortalecem a autoestima e ajudam as mulheres a reconhecerem seu poder interior. Com o tempo, o projeto se transformou em uma ONG, alcançando diversas comunidades e oferecendo um espaço de apoio, solidariedade e igualdade.
                 </p>
 
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi pariatur mollitia iure dicta blanditiis similique vitae esse at laboriosam eaque id, magnam omnis nam repudiandae iste odio, neque dolor itaque.
+                <p>
                 </p>
             </div>
     </div>
 
     <div class="imagem-projeto">
-        <img class="img-projeto" src="https://cdn.pixabay.com/photo/2017/05/02/03/41/action-2277292_1280.jpg" alt="">
+        <img class="img-projeto" src="./src/FP2.jpeg" alt="">
     </div>
 
 
@@ -98,7 +92,7 @@
                     <i class="fa-brands fa-facebook face"></i>
                 </a>
 
-                <a href="">
+                <a href="https://www.instagram.com/femininepowerdance?igsh=MWtuZGYwbDFqZWl5MQ==">
                     <i class="fa-brands fa-square-instagram insta"></i>
                 </a>
             </div>
@@ -153,7 +147,7 @@
             </ul>
         </div>
     </div>
-</footer> 
+</footer>
 
     <script src="script.js"></script>
     <script>
