--- a/projeto-tkd-popupar.html
+++ b/projeto-tkd-popupar.html
@@ -27,7 +27,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto</title>
-    <link rel="stylesheet" href="style-projeto.css">
+    <link rel="stylesheet" href="style-projeto-tkd-popupar.css">
     <!-- Link Ícone da aba -->
     <link rel="shortcut icon" href="http://127.0.0.1:5500/src/Logo%20modo%20claro.png" type="image/x-icon">
 </head>
@@ -69,16 +69,10 @@
             <div class="text">
                 <h2>SOBRE O PROJETO</h2>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed laudantium, consequuntur sunt delectus
-                    impedit, assumenda non enim, a dolores officiis aliquam pariatur neque aut temporibus illo tempora
-                    tempore suscipit! Ullam.
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita, sint illum! Provident iusto
-                    maiores
-                    optio architecto molestiae temporibus, amet numquam voluptas quod et, consequuntur placeat soluta
-                    officia a. Fuga, voluptatum.
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi odio officia, recusandae dolorum sed soluta molestias harum maiores. Quasi quae voluptatibus vitae tempora sequi porro cupiditate, deleniti maxime dicta minima.
                 </p>
 
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi pariatur mollitia iure dicta blanditiis similique vitae esse at laboriosam eaque id, magnam omnis nam repudiandae iste odio, neque dolor itaque.
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate numquam voluptatem magni. Perspiciatis commodi et laboriosam assumenda cum. Ratione ex necessitatibus quas enim, fugiat delectus cum hic ducimus dignissimos autem.
                 </p>
             </div>
     </div>
@@ -153,7 +147,7 @@
             </ul>
         </div>
     </div>
-</footer> 
+</footer>
 
     <script src="script.js"></script>
     <script>
