--- a/sobre.html
+++ b/sobre.html
@@ -38,7 +38,7 @@
     <header>
         <a href="index.html"><img class="logo" src="src/Logo modo escuro.png" alt=""></a>
         <nav>
-            <div class="hanburguer-menu">
+            <div class="hamburger-menu">
                 <div class="menu-bar"></div>
                 <div class="menu-bar"></div>
                 <div class="menu-bar"></div>
@@ -79,7 +79,7 @@
 
     <div data-aos="fade-up">
         <div class="imagem-quemsomos">
-            <img class="img-quemsomos" src="https://cdn.pixabay.com/photo/2015/01/09/11/08/startup-594090_1280.jpg"
+            <img class="img-quemsomos" src="./src/Grupo.jpeg"
                 alt="">
         </div>
     </div>
@@ -112,7 +112,7 @@
                 <img class="img-card" src="src/Thales.jpeg" alt="" width="400px" height="400px">
             </div>
             <h2>
-                Thalles 
+                Thalles
                 <br>
                 Campos
             </h2>
@@ -130,157 +130,157 @@
         <!-- CARD 2 -->
         <div class="profiles">
             <div class="cards">
-                <img class="img-card" src="src/Pedro.jpeg" alt="">
+                <img class="img-card" src="src/Pedro.jpeg" alt="" width="200px" height="200px">
             </div>
-                <h2>
-                    Pedro 
-                    <br>
-                    Henrique
-                </h2>
-                <div class="icons">
-                    <a target="_blank" href="https://www.linkedin.com/in/pedro-henrique-moraes-de-rodrigues-5359b6302/">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-                    <a target="_blank" href="">
-                        <i class="fa-brands fa-github"></i>
-                    </a>
-                </div>
+            <h2>
+                Pedro
+                <br>
+                Henrique
+            </h2>
+            <div class="icons">
+                <a target="_blank" href="https://www.linkedin.com/in/pedro-henrique-moraes-de-rodrigues-5359b6302/">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a target="_blank" href="https://github.com/phzinx18">
+                    <i class="fa-brands fa-github"></i>
+                </a>
             </div>
+        </div>
 
-            <!-- CARD 3 -->
-            <div class="profiles">
-                <div class="cards">
-                    <img class="img-card" src="src/Ingryd.jpeg" alt="" width="400px" height="400px">
-                </div>
-                    <h2>
-                        Mateus
-                        <br>
-                        Gonçalves
-                    </h2>
-                    <div class="icons">
-                        <a href="">
-                            <i class="fa-brands fa-linkedin"></i>
+        <!-- CARD 3 -->
+        <div class="profiles">
+            <div class="cards">
+                <img class="img-card" src="src/Mateus.jpeg" alt="" width="400px" height="400px">
+            </div>
+            <h2>
+                Mateus
+                <br>
+                Gonçalves
+            </h2>
+            <div class="icons">
+                <a target="_blank" href="https://www.linkedin.com/in/mateus-gon%C3%A7alves-607789231/">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a target="_blank" href="https://github.com/mateusgoncalves24">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </div>
+        </div>
+
+        <!-- CARD 4 -->
+        <div class="profiles">
+            <div class="cards">
+                <img class="img-card" src="src/Yngrid.jpg" alt="">
+            </div>
+            <h2>
+                Yngrid
+                <br>
+                Castilho
+            </h2>
+            <div class="icons">
+                <a target="_blank" href="https://www.linkedin.com/in/yngrid-castilho-170619304/">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a target="_blank" href="https://github.com/01yngrid">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </div>
+        </div>
+
+        <!-- CARD 5 -->
+        <div class="profiles">
+            <div class="cards">
+                <img class="img-card" src="src/Luis.jpeg" alt="">
+            </div>
+            <h2>
+                Luis
+                <br>
+                Eduardo
+            </h2>
+            <div class="icons">
+                <a target="_blank" href="https://www.linkedin.com/in/luis-da-silva-1ba9872aa?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a target="_blank" href="https://github.com/luisdasilva7">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </div>
+        </div>
+
+        <!-- CARD 6 -->
+        <div class="profiles">
+            <div class="cards">
+                <img class="img-card" src="src/Arthur.jpeg" alt="">
+            </div>
+            <h2>
+                Artur
+                <br>
+                Barrios
+            </h2>
+            <div class="icons">
+                <a target="_blank" href="https://www.linkedin.com/in/artur-barrios-2477b2330?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+                <a target="_blank" href="https://github.com/06artur">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            </div>
+        </div>
+
+        <!-- FIM DOS CARDS -->
+    </div>
+       <!-- Rodapé e Navegação -->
+       <footer>
+        <div class="global-footer">
+            <img id="logof" class="logo-footer" src="src/Logo modo escuro.png" alt="">
+            <div class="content-footer">
+                <ul>
+                    <h2>Início</h2>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="projetos.html">Parceiros</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                </ul>
+            </div>
+            <div class="content-footer">
+                <ul>
+                    <h2>Suporte</h2>
+                    <li><a href="#">Telefone</a></li>
+                    <li><a href="#">WhatsApp</a></li>
+                    <li><a href="#">E-mail</a></li>
+                </ul>
+            </div>
+            <div class="content-footer redes-sociais">
+                <ul>
+                    <h2>Redes Sociais</h2>
+
+                    <div class="insta">
+                        <a href="#">
+                            <i class="fa-brands fa-instagram"></i> <!-- logo do instagram -->
+                            <li>projetoraizpoa</li>
                         </a>
-                        <a href="">
-                            <i class="fa-brands fa-github"></i>
+                    </div>
+                    <div class="face">
+                        <a href="#">
+                            <i class="fa-brands fa-facebook"></i><!-- logo facebook -->
+                            <li>Projeto_Raiz</li>
                         </a>
                     </div>
-                </div>
-
-                <!-- CARD 4 -->
-                <div class="profiles">
-                    <div class="cards">
-                        <img class="img-card" src="src/Luis.jpeg" alt="">
+                    <div class="tik">
+                        <a href="#">
+                            <i class="fa-brands fa-tiktok"></i><!-- logo tik tok  -->
+                            <li>Projeto Raiz</li>
+                        </a>
                     </div>
-                        <h2>
-                            Yngrid 
-                            <br>
-                            Castilho
-                        </h2>
-                        <div class="icons">
-                            <a href="">
-                                <i class="fa-brands fa-linkedin"></i>
-                            </a>
-                            <a href="">
-                                <i class="fa-brands fa-github"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!-- CARD 5 -->
-                    <div class="profiles">
-                        <div class="cards">
-                            <img class="img-card" src="src/Luis.jpeg" alt="">
-                        </div>
-                            <h2>
-                                Luis 
-                                <br>
-                                Eduardo
-                            </h2>
-                            <div class="icons">
-                                <a href="">
-                                    <i class="fa-brands fa-linkedin"></i>
-                                </a>
-                                <a href="">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-
-                        <!-- CARD 6 -->
-                        <div class="profiles">
-                            <div class="cards">
-                                <img class="img-card" src="src/Luis.jpeg" alt="">
-                            </div>
-                            <h2>
-                                Artur 
-                                <br>
-                                Barrios
-                            </h2>
-                            <div class="icons">
-                                <a href="">
-                                    <i class="fa-brands fa-linkedin"></i>
-                                </a>
-                                <a href="">
-                                    <i class="fa-brands fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-
-                        <!-- FIM DOS CARDS -->
-                    </div>
-                    <!-- Rodapé e Navegação -->
-                    <footer>
-                        <div class="global-footer">
-                            <img class="logo-footer" src="src/Logo modo escuro.png" alt="">
-                            <div class="content-footer">
-                                <ul>
-                                    <h2>Início</h2>
-                                    <li><a href="home.html">Home</a></li>
-                                    <li><a href="projetos.html">Parceiros</a></li>
-                                    <li><a href="sobre.html">Sobre</a></li>
-                                </ul>
-                            </div>
-                            <div class="content-footer">
-                                <ul>
-                                    <h2>Suporte</h2>
-                                    <li><a href="#">Telefone</a></li>
-                                    <li><a href="#">WhatsApp</a></li>
-                                    <li><a href="#">E-mail</a></li>
-                                </ul>
-                            </div>
-                            <div class="content-footer">
-                                <ul>
-                                    <h2>Redes Sociais</h2>
-
-                                    <div class="insta">
-                                        <a href="#">
-                                            <i class="fa-brands fa-instagram"></i> <!-- logo do instagram -->
-                                            <li>projetoraizpoa</li>
-                                        </a>
-                                    </div>
-                                    <div class="face">
-                                        <a href="#">
-                                            <i class="fa-brands fa-facebook"></i><!-- logo facebook -->
-                                            <li>Projeto_Raiz</li>
-                                        </a>
-                                    </div>
-                                    <div class="tik">
-                                        <a href="#">
-                                            <i class="fa-brands fa-tiktok"></i><!-- logo tik tok  -->
-                                            <li>Projeto Raiz</li>
-                                        </a>
-                                    </div>
-                                </ul>
-                            </div>
-                        </div>
-                    </footer>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
-                    <script src="script.js"></script>
-                    <script>
-                        AOS.init();
-                    </script>
+    <script src="script.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
